--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,29 @@
 /* Inserta tu código aquí */
+*
+{
+    outline: 1px solid pink;
+}
+header
+{
+    background-image: url(../img/creamy.jpg);
+    background-repeat: no-repeat;
+    text-align: center;
+    background-size: cover;
+}
+header .text-center
+{
+    margin:15% 15%;
+}
+.icon-container
+{
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    line-height: 150px;
+    font-size: 60px;
+    text-align: center;
+    box-shadow: -2px 2px 10px rgba(0,0,0,0,4);
+    color:#be3c3c;
+    
+}
+
