--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,60 @@
 {
     outline: 1px solid pink;
 }
-header
+body
+{
+    
+}
+h1 ,h2
+{
+ font-family: 'Merriweather', serif;   
+}
+header{
+	padding: 0.5%;
+}
+
+.navbar button span
+{
+	background-color:rgb(212, 207, 169);
+}
+
+.hero
 {
     background-image: url(../img/creamy.jpg);
     background-repeat: no-repeat;
-    text-align: center;
+    background-position: center;
     background-size: cover;
+    
 }
-header .text-center
+.opacity
 {
-    margin:15% 15%;
+    background: rgba(0, 0, 0, 0.6);
+
+}
+.hero .text-center
+{
+    margin: 20%;
+    color:#fdee9d; 
+}
+.container-fluid
+{
+ padding: 1%; 
+}
+header ,.rojo , footer
+{
+    background-color: #be3c3c;
+    color:#fdee9d; 
+
+}
+.rojo
+{
+   
+    padding: 3%;
+}
+.medio .container-fluid , .iconos
+{
+    background: #fdee9d;
+    color:#be3c3c; 
 }
 .icon-container
 {
@@ -25,5 +69,31 @@ header .text-center
     box-shadow: -2px 2px 10px rgba(0,0,0,0,4);
     color:#be3c3c;
     
+}
+footer
+{
+    padding: 1%;
+}
+
+@media (max-width:900px)
+{
+	.container
+	{
+		width: 700px;
+	}
+}
+
+@media (max-width:600px) and (min-width:350px)
+{
+    .container
+	{
+		width: 100%;
+	}
+    .container-fluid
+    {
+      width: 100%;  
+    }
+	
+	
 }
 
